# h_claw

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.en.md  README.md  compose.yaml  hermes-crawler-mcp-technical-design.md  hermes-crawler-phase3-login-fingerprint-design.md  pyproject.toml
app/: admin.py  config.py  main.py  service_factory.py
app/converter/: cleaner.py  images.py  markdown.py  pipeline.py  structured_data.py
app/crawler/: browser_fetch_common.py  browser_fetcher.py  browser_login.py  browser_pool.py  challenge_signatures.yaml  cooldown.py  detector.py  http_fetcher.py  login_manager.py  login_persist.py  orchestrator.py  profile_manager.py  qr_render.py  stealth_fetcher.py
app/observability/: logging.py  metrics.py  redaction.py
app/security/: url_validator.py
app/storage/: cache.py  database.py  profile_store.py  results.py
app/tools/: crawl_url.py  login.py  read_result.py  service.py
doc/: h_claw_manual_challenge_test_cases.md  h_claw_modification_tasks.md
skills/: README.md
skills/crawler-mcp/: SKILL.md
tests/: test_admin.py  test_config.py  test_health.py
tests/converter/: test_cleaner.py  test_images.py  test_markdown.py  test_pipeline.py  test_structured_data.py
tests/crawler/: conftest.py  test_browser_fetcher.py  test_browser_integration.py  test_browser_login.py  test_browser_login_adapters.py  test_browser_pool.py  test_cooldown_store.py  test_detector.py  test_detector_evidence.py  test_http_fetcher.py  test_jd_login_adapter.py  test_login_adapters.py  test_login_hardening.py  test_login_manager.py  (+9 more)
(+23 files in other folders)
