[project]
name = "crawler-mcp"
version = "0.1.0"
description = "Hermes 一体化爬虫 MCP 服务"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "fastmcp>=2.0",
    "lxml>=6.1.1",
    "markdownify>=1.2.3",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0.3",
    "scrapling[fetchers]>=0.4.11",
    "starlette>=0.38",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "browser: tests that launch a real headless browser (slow, needs playwright browsers)",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
